--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -8,19 +8,31 @@ update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.co
 
 
 [Rule]
-DOMAIN-SUFFIX,aaplimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,apple.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,apple.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,appstore.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cdn-apple.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,crashlytics.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,icloud.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,icloud-content.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,me.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,mzstatic.com,PROXY,force-remote-dns
-DOMAIN,www-cdn.icloud.com.akadns.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,aaplimg.com,DIRECT
+DOMAIN-SUFFIX,apple.co,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,appstore.com,DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,DIRECT
+DOMAIN-SUFFIX,crashlytics.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,PDIRECT
+DOMAIN-SUFFIX,me.com,PDIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
+#Apple
 
+DOMAIN,api.smoot.apple.com,DIRECT
+DOMAIN,api.smoot.apple.com.cn,DIRECT
+DOMAIN,configuration.apple.com,DIRECT
+DOMAIN,xp.apple.com,DIRECT
+DOMAIN,smp-device-content.apple.com,DIRECT
+DOMAIN,guzzoni.apple.com,DIRECT
+DOMAIN,captive.apple.com,DIRECT
+DOMAIN-SUFFIX,ess.apple.com,DIRECT
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 
+#Reject
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN,log.mmstat.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
@@ -35,13 +47,22 @@ DOMAIN,ipm.atm.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
+DOMAIN-SUFFIX,taboola.com,reject
+
+
+//江阴bus
 DOMAIN,stats.jpush.cn,REJECT
 DOMAIN,wx.hfxing.cn,REJECT
 DOMAIN,ali-stats.jpush.cn,REJECT
+
+# > KFC
 DOMAIN,fp.hwwt8.com,REJECT
 DOMAIN,trackingprd.hwwt8.com,REJECT
+
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
+
+# > 高德
 DOMAIN,logs.amap.com,REJECT
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
@@ -49,66 +70,128 @@ DOMAIN,sync.amap.com,REJECT
 DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
+
 DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
+
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,inner-active.mobi,REJECT
 DOMAIN,union.uc.cn,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
+
+# > WPS
 DOMAIN,img.auction-ads.wpscdn.cn,REJECT
 DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
+
 DOMAIN-SUFFIX,umeng.com,REJECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
 DOMAIN-SUFFIX,zt.baidu.com,REJECT
 
-DOMAIN,e.crashlytics.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,inoreader.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,muncloud.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nexitcore.com,PROXY,force-remote-dns
-DOMAIN,graph.microsoft.com,PROXY,force-remote-dns
-DOMAIN,oneclient.sfx.ms,PROXY,force-remote-dns
-DOMAIN-SUFFIX,scribd.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,scupio.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,creativecdn.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,aralego.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,animeone.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,anime1.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pscdn.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ampproject.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,app-measurement.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,msauth.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,hotmail.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pixiv.cat,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pximg.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,zaobao.com.sg,PROXY,force-remote-dns
-DOMAIN-SUFFIX,playno1.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,sehuatang.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cloudflare.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,qualtrics.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,evernote.com,PROXY,force-remote-dns
-DOMAIN,login.live.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,vfast.cc,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nationalgeographic.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,liuli.uk,PROXY,force-remote-dns
-DOMAIN-SUFFIX,p0rn-downloads.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,imagetwist.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,v2ex.com,PROXY,force-remote-dns
-DOMAIN,login.microsoftonline.com,PROXY,force-remote-dns
+# Proxy
+DOMAIN,e.crashlytics.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,inoreader.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,muncloud.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nexitcore.com,Proxy,force-remote-dns
+DOMAIN,graph.microsoft.com,Proxy,force-remote-dns
+DOMAIN,oneclient.sfx.ms,Proxy,force-remote-dns
+DOMAIN-SUFFIX,scribd.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,scupio.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,creativecdn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,aralego.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,animeone.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,anime1.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pscdn.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ampproject.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ampproject.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,app-measurement.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,msauth.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hotmail.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pixiv.cat,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pximg.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,zaobao.com.sg,Proxy,force-remote-dns
+DOMAIN-SUFFIX,playno1.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sehuatang.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cloudflare.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,qualtrics.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,evernote.com,Proxy,force-remote-dns
+DOMAIN,login.live.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vfast.cc,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nationalgeographic.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,liuli.uk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,p0rn-downloads.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,imagetwist.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,gravatar.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,dlercloud.io,proxy,force-remote-dns
+DOMAIN-SUFFIX,hacg.fi,proxy,force-remote-dns
+DOMAIN-SUFFIX,feedx.net,proxy,force-remote-dns
+DOMAIN-SUFFIX,v2ex.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,feedburner.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,rrys.tv,proxy,force-remote-dns
+DOMAIN-SUFFIX,kindle4rss.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,rsshub.app,proxy,force-remote-dns
+DOMAIN-SUFFIX,dmhy.org,proxy,force-remote-dns
+DOMAIN-SUFFIX,feedx.co,proxy,force-remote-dns
+DOMAIN-SUFFIX,vol.moe,proxy,force-remote-dns
+DOMAIN-SUFFIX,xuite.net,proxy,force-remote-dns
+DOMAIN-SUFFIX,playio1.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,volmoe.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,dler.cloud,proxy,force-remote-dns
+DOMAIN-SUFFIX,wikimedia.org,proxy,force-remote-dns
 
 
+# > Spotify
+USER-AGENT,Spotify*,proxy,force-remote-dns
+DOMAIN-SUFFIX,pscdn.co,proxy,force-remote-dns
+DOMAIN-SUFFIX,scdn.co,proxy,force-remote-dns
+DOMAIN-SUFFIX,spotify.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,spoti.fi,proxy,force-remote-dns
+IP-CIDR,35.186.224.47/32,proxy
+# > Pornhub
+DOMAIN-SUFFIX,phncdn.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,pornhub.com,proxy,force-remote-dns
+DOMAIN-SUFFIX,pornhubpremium.com,proxy,force-remote-dns
+
+# > BBC iPlayer
+USER-AGENT,BBCiPlayer*,proxy,force-remote-dns
+DOMAIN-SUFFIX,bbc.co.uk,proxy,force-remote-dns
+DOMAIN-SUFFIX,bbci.co.uk,proxy,force-remote-dns
+DOMAIN-KEYWORD,bbcfmt,proxy,force-remote-dns
+DOMAIN-KEYWORD,uk-live,proxy,force-remote-dns
+
+//油管
+USER-AGENT,youtube*,Google,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,Google,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,Google,force-remote-dns,force-remote-dns
+DOMAIN,youtubei.googleapis.com,Google,force-remote-dns
+USER-AGENT,com.google.ios.youtube*,Google,force-remote-dns
+USER-AGENT,YouTubeMusic*,Google,force-remote-dns
+
+DOMAIN-SUFFIX,ggpht.com,proxy,force-remote-dns,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,proxy,force-remote-dns
+
+
+//动画疯
+USER-AGENT,Anime*,proxy,force-remote-dns
+DOMAIN-SUFFIX,bahamut.com.tw,proxy,force-remote-dns
+DOMAIN-SUFFIX,gamer.com.tw,proxy,force-remote-dns
+DOMAIN-SUFFIX,hinet.net,proxy,force-remote-dns
+
+DOMAIN-SUFFIX,digitalcertvalidation.com,direct
 DOMAIN,app.adjust.com,DIRECT
 DOMAIN-SUFFIX,graph.facebook.com,DIRECT
 DOMAIN-SUFFIX,services.mozilla.com,DIRECT
-DOMAIN-SUFFIX,letsencrypt.org,DIRECT
-DOMAIN-SUFFIX,digicert.com,DIRECT
-
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
+DOMAIN,login.microsoftonline.com,DIRECT
+DOMAIN-SUFFIX,letsencrypt.org,DIRECT
+DOMAIN-SUFFIX,digicert.com,DIRECT
+DOMAIN-SUFFIX,ifanr.com,direct
+DOMAIN-SUFFIX,engadget.com,direct
+DOMAIN-SUFFIX,95516.com,direct
 
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,adservice,REJECT
@@ -251,11 +334,6 @@ DOMAIN,tajs.qq.com,REJECT
 DOMAIN,wxsnsdy.wxs.qq.com,REJECT
 DOMAIN,wxsnsdythumb.wxs.qq.com,REJECT
 
-USER-AGENT,com.google.ios.youtube*,PROXY,force-remote-dns
-USER-AGENT,YouTube*,PROXY,force-remote-dns
-DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
-DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,blogger.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,getoutline.org,PROXY,force-remote-dns
@@ -1088,7 +1166,7 @@ FINAL,PROXY
 
 
 [URL Rewrite]
-^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.tw 302
+^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.sg 302
 ^https?:\/\/(www.)?ign\.xn--fiqs8s\/ http://cn.ign.com/ccpref/us 302
 ^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
