--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -8,6 +8,19 @@ update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.co
 
 
 [Rule]
+
+#Apple
+DOMAIN,api.smoot.apple.com,DIRECT
+DOMAIN,api.smoot.apple.com.cn,DIRECT
+DOMAIN,configuration.apple.com,DIRECT
+DOMAIN,xp.apple.com,DIRECT
+DOMAIN,smp-device-content.apple.com,DIRECT
+DOMAIN,guzzoni.apple.com,DIRECT
+DOMAIN,captive.apple.com,DIRECT
+DOMAIN-SUFFIX,ess.apple.com,DIRECT
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
+
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
@@ -19,18 +32,6 @@ DOMAIN-SUFFIX,icloud-content.com,PDIRECT
 DOMAIN-SUFFIX,me.com,PDIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
 DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
-#Apple
-
-DOMAIN,api.smoot.apple.com,DIRECT
-DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN,configuration.apple.com,DIRECT
-DOMAIN,xp.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,guzzoni.apple.com,DIRECT
-DOMAIN,captive.apple.com,DIRECT
-DOMAIN-SUFFIX,ess.apple.com,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 
 #Reject
 DOMAIN-SUFFIX,appadhoc.com,REJECT
@@ -141,7 +142,8 @@ DOMAIN-SUFFIX,playio1.com,proxy,force-remote-dns
 DOMAIN-SUFFIX,volmoe.com,proxy,force-remote-dns
 DOMAIN-SUFFIX,dler.cloud,proxy,force-remote-dns
 DOMAIN-SUFFIX,wikimedia.org,proxy,force-remote-dns
-
+DOMAIN-SUFFIX,adtidy.org,proxy,force-remote-dns
+DOMAIN-SUFFIX,adguard.com,proxy,force-remote-dns
 
 # > Spotify
 USER-AGENT,Spotify*,proxy,force-remote-dns
@@ -150,6 +152,7 @@ DOMAIN-SUFFIX,scdn.co,proxy,force-remote-dns
 DOMAIN-SUFFIX,spotify.com,proxy,force-remote-dns
 DOMAIN-SUFFIX,spoti.fi,proxy,force-remote-dns
 IP-CIDR,35.186.224.47/32,proxy
+
 # > Pornhub
 DOMAIN-SUFFIX,phncdn.com,proxy,force-remote-dns
 DOMAIN-SUFFIX,pornhub.com,proxy,force-remote-dns
@@ -192,6 +195,7 @@ DOMAIN-SUFFIX,digicert.com,DIRECT
 DOMAIN-SUFFIX,ifanr.com,direct
 DOMAIN-SUFFIX,engadget.com,direct
 DOMAIN-SUFFIX,95516.com,direct
+DOMAIN-SUFFIX,digicert-cn.com,direct
 
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,adservice,REJECT
