--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -144,7 +144,7 @@ DOMAIN-SUFFIX,dler.cloud,proxy,force-remote-dns
 DOMAIN-SUFFIX,wikimedia.org,proxy,force-remote-dns
 DOMAIN-SUFFIX,adtidy.org,proxy,force-remote-dns
 DOMAIN-SUFFIX,adguard.com,proxy,force-remote-dns
-
+DOMAIN-SUFFIX,shttupian.com,PROXY,force-remote-dns
 # > Spotify
 USER-AGENT,Spotify*,proxy,force-remote-dns
 DOMAIN-SUFFIX,pscdn.co,proxy,force-remote-dns
@@ -196,6 +196,9 @@ DOMAIN-SUFFIX,ifanr.com,direct
 DOMAIN-SUFFIX,engadget.com,direct
 DOMAIN-SUFFIX,95516.com,direct
 DOMAIN-SUFFIX,digicert-cn.com,direct
+DOMAIN-SUFFIX,airdroid.com,DIRECT 
+DOMAIN,ocsp.sectigo.com,DIRECT 
+
 
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,adservice,REJECT
