--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -199,6 +199,8 @@ DOMAIN-SUFFIX,engadget.com,direct
 DOMAIN-SUFFIX,95516.com,direct
 DOMAIN-SUFFIX,digicert-cn.com,direct
 DOMAIN-SUFFIX,airdroid.com,DIRECT 
+IP-CIDR,49.51.40.151/32,DIRECT,no-resolve
+DOMAIN-SUFFIX,qbox.me,DIRECT
 DOMAIN,ocsp.sectigo.com,DIRECT 
 
 
