--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -12,6 +12,7 @@ update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.co
 [Rule]
 
 #Apple
+
 DOMAIN,api.smoot.apple.com,DIRECT
 DOMAIN,api.smoot.apple.com.cn,DIRECT
 DOMAIN,configuration.apple.com,DIRECT
@@ -23,25 +24,286 @@ DOMAIN-SUFFIX,ess.apple.com,DIRECT
 DOMAIN-SUFFIX,push.apple.com,DIRECT
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 
-DOMAIN-SUFFIX,aaplimg.com,DIRECT
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-DOMAIN-SUFFIX,crashlytics.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,PDIRECT
-DOMAIN-SUFFIX,me.com,PDIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
-DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
-
 #Reject
+#隐私
+DOMAIN-SUFFIX,7moor.com,reject
+DOMAIN-SUFFIX,2005net.net,reject
+DOMAIN-SUFFIX,3jia5.com,reject
+DOMAIN-SUFFIX,5251.net,reject
+DOMAIN-SUFFIX,53kf.com,reject
+DOMAIN-SUFFIX,54kefu.net,reject
+DOMAIN-SUFFIX,5etv.com,reject
+DOMAIN-SUFFIX,bobo.com,reject
+DOMAIN-SUFFIX,meiqia.com,reject
+DOMAIN-SUFFIX,mylikechat.com,reject
+DOMAIN-SUFFIX,ntalker.com,reject
+DOMAIN-SUFFIX,pop800.com,reject
+DOMAIN-SUFFIX,soperson.com,reject
+DOMAIN-SUFFIX,zoosnet.net,reject
+DOMAIN-SUFFIX,zoossoft.cn,reject
+DOMAIN-SUFFIX,51.la,reject
+DOMAIN-SUFFIX,51la.net,reject
+IP-CIDR,113.105.248.169/32,reject
+
+
+DOMAIN,cir-smart.baidu.com,reject
+DOMAIN,crs.baidu.com,reject
+DOMAIN,goutong.baidu.com,reject
+DOMAIN,knet.cn,reject
+DOMAIN,kuaishang.cn,reject
+DOMAIN,live800.com,reject
+DOMAIN,looyu.com,reject
+DOMAIN,lxbjs.baidu.com,reject
+DOMAIN,tui.cnzz.net,reject
+DOMAIN,a6.hujiang.com,reject
+DOMAIN,ad.qn.img-space.com,reject
+DOMAIN,bestpush.pconline.com.cn,reject
+DOMAIN,cpu.baidu.com,reject
+
+DOMAIN,imall.cctv.com,reject
+DOMAIN,imall.cntv.cn,reject
+DOMAIN,sp.qf.56.com,reject
+DOMAIN,webservice.360doc.com,reject
+DOMAIN,zndsssp.dangbei.net,reject
+
+
+
+DOMAIN,analy.tuniu.cn,reject
+DOMAIN,analyse.weather.com.cn,reject
+DOMAIN,analysis.chinaiiss.com,reject
+DOMAIN,analytics-union.sandai.net,reject
+DOMAIN,analytics-union.xunlei.com,reject
+DOMAIN,analytics.21cn.com,reject
+DOMAIN,analytics.oneplus.cn,reject
+DOMAIN,analytics.techweb.com.cn,reject
+DOMAIN,analytics.tv189.cn,reject
+DOMAIN,apistat.gao7.com,reject
+DOMAIN,apistat.wasu.cn,reject
+DOMAIN,bc.qunar.com,reject
+DOMAIN,bdstatic.eastmoney.com,reject
+DOMAIN,carstat.bitauto.com,reject
+DOMAIN,cbjg.cqnews.net,reject
+DOMAIN,cdnlog.zhenai.com,reject
+DOMAIN,cig.com.cn,reject
+DOMAIN,click.tianyaui.com,reject
+DOMAIN,cnpc.infzm.com,reject
+DOMAIN,count.candou.com,reject
+DOMAIN,count.enet.com.cn,reject
+DOMAIN,count.iyaxin.com,reject
+DOMAIN,count.pcauto.com.cn,reject
+DOMAIN,count.pcgames.com.cn,reject
+DOMAIN,counter.pcauto.com.cn,reject
+DOMAIN,counter.tianjimedia.com,reject
+DOMAIN,countpage.sznews.com,reject
+DOMAIN,cpms.now.com,reject
+DOMAIN,data.xici.net,reject
+DOMAIN,dig.qbao.com,reject
+DOMAIN,ejieban.com,reject
+DOMAIN,fcm.baidu.com,reject
+DOMAIN,g.yccdn.com,reject
+DOMAIN,haostat.qihoo.com,reject
+DOMAIN,hiido.com,reject
+DOMAIN,imgstat.baidu.com,reject
+DOMAIN,imp.zol.com.cn,reject
+DOMAIN,ipinyou.com,reject
+DOMAIN,isdspeed.qq.com,reject
+DOMAIN,itsmore.cn,reject
+DOMAIN,kkpgv2.xunlei.com,reject
+DOMAIN,l.ykimg.com,reject
+DOMAIN,ll.hudong.com,reject
+DOMAIN,log.daqi.com,reject
+DOMAIN,log.mtime.cn,reject
+DOMAIN,log.music.baidu.com,reject
+DOMAIN,log.vdisk.cn,reject
+DOMAIN,log.zongheng.com,reject
+DOMAIN,log2.mtime.cn,reject
+DOMAIN,mixer.sina.cn,reject
+DOMAIN,mlog.aipai.com,reject
+DOMAIN,msg.ettoday.net,reject
+DOMAIN,msg.iqiyi.com,reject
+DOMAIN,msg.video.qiyi.com,reject
+DOMAIN,nsclick.baidu.com,reject
+DOMAIN,olpv.onlylady.com,reject
+DOMAIN,optaim.com,reject
+DOMAIN,other.v.duowan.com,reject
+DOMAIN,p0y.cn,reject
+DOMAIN,playstats.v.duowan.com,reject
+DOMAIN,pv.ltn.com.tw,reject
+DOMAIN,pv.zhiding.cn,reject
+DOMAIN,pvtest.zol.com.cn,reject
+DOMAIN,qdp.qidian.com,reject
+DOMAIN,record.kuai.xunlei.com,reject
+DOMAIN,reportlog.dftoutiao.com,reject
+DOMAIN,s.btime.com,reject
+DOMAIN,s.so.360.cn,reject
+DOMAIN,s.union.360.cn,reject
+DOMAIN,stat.baike.com,reject
+DOMAIN,stat.cnmo.com,reject
+DOMAIN,stat.cqwb.com.cn,reject
+DOMAIN,stat.cutv.com,reject
+DOMAIN,stat.download.xunlei.com,reject
+DOMAIN,stat.ea3w.com,reject
+DOMAIN,stat.game.yy.com,reject
+DOMAIN,stat.hebnews.cn,reject
+DOMAIN,stat.hkwb.net,reject
+DOMAIN,stat.house365.com,reject
+DOMAIN,stat.ijinshan.com,reject
+DOMAIN,stat.img-space.com,reject
+DOMAIN,stat.mql5.com,reject
+DOMAIN,stat.pchome.net,reject
+DOMAIN,stat.timedg.com,reject
+DOMAIN,stat.ts.cn,reject
+DOMAIN,stat.v.17173.com,reject
+DOMAIN,stat.xgo.com.cn,reject
+DOMAIN,stat.yunfan.com,reject
+DOMAIN,static.gridsumdissector.com,reject
+DOMAIN,statis1.mama.cn,reject
+DOMAIN,stats.766.com,reject
+DOMAIN,stats.v.duowan.com,reject
+DOMAIN,ta.trs.cn,reject
+DOMAIN,tajs.qq.com,reject
+DOMAIN,tcss.qq.com,reject
+DOMAIN,tj.21ic.com,reject
+DOMAIN,tjj.com,reject
+DOMAIN,tongji.xinmin.cn,reject
+DOMAIN,track.hujiang.com,reject
+DOMAIN,track.uc.cn,reject
+DOMAIN,vm.aty.sohu.com,reject
+DOMAIN,xls.go.sohu.com,reject
+DOMAIN,ysont.cn,reject
+DOMAIN,beacon.sina.com.cn,reject
+DOMAIN,cnzz.com,reject
+DOMAIN,hm.baidu.com,reject
+DOMAIN,msg.71.am,reject
+DOMAIN,rs.sinajs.cn,reject
+DOMAIN,s.360.cn,reject
+DOMAIN,stadig.ifeng.com,reject
+DOMAIN,wrating.com,reject
+DOMAIN,adgeo.163.com,reject
+DOMAIN,al.autohome.com.cn,reject
+DOMAIN,analy.qq.com,reject
+DOMAIN,analyse.weather.com.cn,reject
+DOMAIN,analytics.163.com,reject
+DOMAIN,analytics.nextmedia.com,reject
+DOMAIN,analytics.shop.hisense.com,reject
+DOMAIN,analytics.zhihu.com,reject
+DOMAIN,atm.youku.com,reject
+DOMAIN,bc.qunar.com,reject
+DOMAIN,bdwblog.eastmoney.com,reject
+DOMAIN,bglog.bitauto.com,reject
+DOMAIN,btrace.qq.com,reject
+DOMAIN,cast.ra.icast.cn,reject
+DOMAIN,click.ali213.net,reject
+DOMAIN,click.gamersky.com,reject
+DOMAIN,click.suning.cn,reject
+DOMAIN,clkstat.qihoo.com,reject
+DOMAIN,cmstool.youku.com,reject
+DOMAIN,collect.tianya.cn,reject
+DOMAIN,collect.yinyuetai.com,reject
+DOMAIN,count.joy.cn,reject
+DOMAIN,count.kandian.com,reject
+DOMAIN,count.newhua.com,reject
+DOMAIN,count.qiannao.com,reject
+DOMAIN,count.taobao.com,reject
+DOMAIN,count.video.sina.com.cn,reject
+DOMAIN,count.vrs.sohu.com,reject
+DOMAIN,count5.pconline.com.cn,reject
+DOMAIN,counter.people.cn,reject
+DOMAIN,dc.letv.com,reject
+DOMAIN,deliver.ifeng.com,reject
+DOMAIN,dj.renren.com,reject
+DOMAIN,dmtrack.xiu.com,reject
+DOMAIN,dmtracking.1688.com,reject
+DOMAIN,dwtracking.sdo.com,reject
+DOMAIN,eclick.baidu.com,reject
+DOMAIN,hk.ndx.nextmedia.com,reject
+DOMAIN,imp.appledaily.com,reject
+DOMAIN,jcm.jd.com,reject
+DOMAIN,log*.ku6.com,reject
+DOMAIN,log.51cto.com,reject
+DOMAIN,log.bitauto.com,reject
+DOMAIN,log.flight.qunar.com,reject
+DOMAIN,log.kuwo.cn,reject
+DOMAIN,log.m.sm.cn,reject
+DOMAIN,log.ynet.com,reject
+DOMAIN,log1.17173.com,reject
+DOMAIN,loginlog.sdo.com,reject
+DOMAIN,logs.51cto.com,reject
+DOMAIN,logs.live.tudou.com,reject
+DOMAIN,logstat.caixin.com,reject
+DOMAIN,logx.mtime.cn,reject
+DOMAIN,logx.mtime.com,reject
+DOMAIN,mar.vip.com,reject
+DOMAIN,nstat.tudou.com,reject
+DOMAIN,p-log.ykimg.com,reject
+DOMAIN,pass.1688.com,reject
+DOMAIN,pb.i.sogou.com,reject
+DOMAIN,pingback.sogou.com,reject
+DOMAIN,pingjs.qq.com,reject
+DOMAIN,pv.csdn.net,reject
+DOMAIN,pv.ltn.com.tw,reject
+DOMAIN,pv.udn.com,reject
+DOMAIN,pv.xcar.com.cn,reject
+DOMAIN,pvx.xcar.com.cn,reject
+DOMAIN,ranking.ynet.com,reject
+DOMAIN,rcgi.video.qq.com,reject
+DOMAIN,rec.udn.com,reject
+DOMAIN,referer.pixplug.in,reject
+DOMAIN,report.qq.com,reject
+DOMAIN,retcode.taobao.com,reject
+DOMAIN,s.360.cn,reject
+DOMAIN,s.qhupdate.com,reject
+DOMAIN,s.renren.com,reject
+DOMAIN,sclick.baidu.com,reject
+DOMAIN,shrek.6.cn,reject
+DOMAIN,ssp.hinet.net,reject
+DOMAIN,st.vq.ku6.cn,reject
+DOMAIN,sta.ifeng.com,reject
+DOMAIN,stadig.ifeng.com,reject
+DOMAIN,stat.1688.com,reject
+DOMAIN,stat.55bbs.com,reject
+DOMAIN,stat.bilibili.tv,reject
+DOMAIN,stat.caijing.com.cn,reject
+DOMAIN,stat.funshion.net,reject
+DOMAIN,stat.hudong.com,reject
+DOMAIN,stat.iteye.com,reject
+DOMAIN,stat.ku6.com,reject
+DOMAIN,stat.ppstream.com,reject
+DOMAIN,stat.pptv.com,reject
+DOMAIN,stat.stheadline.com,reject
+DOMAIN,stat.tianya.cn,reject
+DOMAIN,stat.tudou.com,reject
+DOMAIN,stat.uuu9.com,reject
+DOMAIN,stat.xunlei.com,reject
+DOMAIN,stat.zol.com.cn,reject
+DOMAIN,statistic.qzone.qq.com,reject
+DOMAIN,statistic.takungpao.com,reject
+DOMAIN,stats.autohome.com.cn,reject
+DOMAIN,stats.tudou.com,reject
+DOMAIN,stats.yinyuetai.com,reject
+DOMAIN,tbskip.taobao.com,reject
+DOMAIN,tf.360.cn,reject
+DOMAIN,tinglog.baidu.com,reject
+DOMAIN,tongji.mafengwo.cn,reject
+DOMAIN,tr.discuss.com.hk,reject
+DOMAIN,tr.price.com.hk,reject
+DOMAIN,track.sohu.com,reject
+DOMAIN,tracker.live.tudou.com,reject
+DOMAIN,uestat.video.qiyi.com,reject
+DOMAIN,utrack.hexun.com,reject
+DOMAIN,vatrack.hinet.net,reject
+DOMAIN,webclick.yeshj.com,reject
+DOMAIN,webstat.kuwo.cn,reject
+DOMAIN,wl.jd.com,reject
+DOMAIN,zhihu-web-analytics.zhihu.com,reject
+DOMAIN,stat.novinky.cz,reject
+
+DOMAIN-KEYWORD,analytics,reject
+
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN,log.mmstat.com,REJECT
-DOMAIN-SUFFIX,51la.net,REJECT
 DOMAIN,cig.com.cn,REJECT
-DOMAIN,ta.trs.cn,REJECT
-DOMAIN,tingyun.com,REJECT
+DOMAIN-SUFFIX,tingyun.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,trackingio.com,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
@@ -52,6 +314,8 @@ DOMAIN-SUFFIX,criteo.com,REJECT
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
 DOMAIN-SUFFIX,taboola.com,reject
 
+DOMAIN-SUFFIX,inmobi.cn,reject
+DOMAIN,ad.caiyunapp.com,reject
 
 //江阴bus
 DOMAIN,stats.jpush.cn,REJECT
@@ -93,6 +357,10 @@ DOMAIN-SUFFIX,umeng.com,REJECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
 DOMAIN-SUFFIX,zt.baidu.com,REJECT
+
+
+
+
 
 # Proxy
 DOMAIN,e.crashlytics.com,Proxy,force-remote-dns
