--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -4,7 +4,7 @@ bypass-system = true
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 #dns-server = 119.29.29.29,8.8.4.4
 doh-server-only=true 
-doh-server-url=rubyfish.cn
+doh-server-url=https://dns.google/dns-query
 ipv6 = false
 update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.conf
 
@@ -12,7 +12,6 @@ update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.co
 [Rule]
 
 #Apple
-
 DOMAIN,api.smoot.apple.com,DIRECT
 DOMAIN,api.smoot.apple.com.cn,DIRECT
 DOMAIN,configuration.apple.com,DIRECT
