--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1541,7 +1541,7 @@ USER-AGENT,WeChat*,DIRECT
 USER-AGENT,YYeTs*,DIRECT
 
 GEOIP,CN,DIRECT
-FINAL,PROXY,force-remote-dns
+FINAL,PROXY
 
 [URL Rewrite]
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.sg 302
