--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -113,6 +113,8 @@ host, himg.bdimg.com, reject
 host, wappass.bdimg.com, reject
 DOMAIN,opnstat.baidu.com,REJECT
 
+
+
 DOMAIN-SUFFIX,ad.daum.net,REJECT
 DOMAIN-SUFFIX,track.xiachufang.com,REJECT
 DOMAIN,abema-adx.ameba.jp,REJECT
@@ -156,7 +158,7 @@ DOMAIN,track.tiara.kakao.com,REJECT
 DOMAIN,trackapp.guahao.cn,REJECT
 DOMAIN,traffic.mogujie.com,REJECT
 DOMAIN,wmlog.meituan.com,REJECT
-
+DOMAIN,goblin.hupu.com,REJECT
 
 
 #百度地图
@@ -967,17 +969,17 @@ DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yt.be,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zaobao.com.sg,PROXY,force-remote-dns
-IP-CIDR,104.244.42.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,149.154.160.0/20,PROXY,force-remote-dns,no-resolve
-IP-CIDR,205.172.60.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,35.186.224.47/32,PROXY,force-remote-dns,no-resolve
-IP-CIDR,67.198.55.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.12.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.16.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.4.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.8.0/22,PROXY,force-remote-dns,no-resolve
+IP-CIDR,104.244.42.0/24,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.160.0/20,PROXY,no-resolve
+IP-CIDR,205.172.60.0/22,PROXY,no-resolve
+IP-CIDR,35.186.224.47/32,PROXY,no-resolve
+IP-CIDR,67.198.55.0/24,PROXY,no-resolve
+IP-CIDR,91.108.12.0/22,PROXY,no-resolve
+IP-CIDR,91.108.16.0/22,PROXY,no-resolve
+IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 USER-AGENT,Anime*,PROXY,force-remote-dns
 USER-AGENT,com.google.ios.youtube*,PROXY,force-remote-dns
 USER-AGENT,Spotify*,PROXY,force-remote-dns
@@ -990,53 +992,53 @@ DOMAIN-SUFFIX,brawlstars.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,brawlstarsgame,PROXY,force-remote-dns
 
 
-IP-CIDR,3.80.0.0/12,PROXY,force-remote-dns,no-resolve
-IP-CIDR,3.112.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,3.113.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.120.0.0/14,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.115.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.221.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.230.33.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.231.87.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.232.0.0/14,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.250.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.228.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,15.206.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.229.131.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.138.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.141.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.182.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.184.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.176.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.194.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.231.0.0/16,PROXY,force-remote-dns,no-resolve
+IP-CIDR,3.80.0.0/12,PROXY,no-resolve
+IP-CIDR,3.112.0.0/16,PROXY,no-resolve
+IP-CIDR,3.113.0.0/16,PROXY,no-resolve
+IP-CIDR,13.120.0.0/14,PROXY,no-resolve
+IP-CIDR,13.115.0.0/16,PROXY,no-resolve
+IP-CIDR,13.221.0.0/16,PROXY,no-resolve
+IP-CIDR,13.230.33.0/24,PROXY,no-resolve
+IP-CIDR,13.231.87.0/24,PROXY,no-resolve
+IP-CIDR,13.232.0.0/14,PROXY,no-resolve
+IP-CIDR,13.250.0.0/16,PROXY,no-resolve
+IP-CIDR,13.228.0.0/15,PROXY,no-resolve
+IP-CIDR,15.206.0.0/16,PROXY,no-resolve
+IP-CIDR,18.229.131.0/24,PROXY,no-resolve
+IP-CIDR,18.138.0.0/15,PROXY,no-resolve
+IP-CIDR,18.141.0.0/16,PROXY,no-resolve
+IP-CIDR,18.182.0.0/16,PROXY,no-resolve
+IP-CIDR,18.184.0.0/15,PROXY,no-resolve
+IP-CIDR,18.176.0.0/16,PROXY,no-resolve
+IP-CIDR,18.194.0.0/15,PROXY,no-resolve
+IP-CIDR,18.231.0.0/16,PROXY,no-resolve
 
-IP-CIDR,34.208.0.0/12,PROXY,force-remote-dns,no-resolve
-IP-CIDR,34.220.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,34.226.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,34.240.0.0/13,PROXY,force-remote-dns,no-resolve
-IP-CIDR,34.251.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,35.160.0.0/13,PROXY,force-remote-dns,no-resolve
-IP-CIDR,35.168.0.0/13,PROXY,force-remote-dns,no-resolve
-IP-CIDR,35.158.0.0/16,PROXY,force-remote-dns,no-resolve
+IP-CIDR,34.208.0.0/12,PROXY,no-resolve
+IP-CIDR,34.220.0.0/16,PROXY,no-resolve
+IP-CIDR,34.226.0.0/16,PROXY,no-resolve
+IP-CIDR,34.240.0.0/13,PROXY,no-resolve
+IP-CIDR,34.251.0.0/16,PROXY,no-resolve
+IP-CIDR,35.160.0.0/13,PROXY,no-resolve
+IP-CIDR,35.168.0.0/13,PROXY,no-resolve
+IP-CIDR,35.158.0.0/16,PROXY,no-resolve
 
-IP-CIDR,157.175.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,50.112.0.0/17,PROXY,force-remote-dns,no-resolve
+IP-CIDR,157.175.0.0/16,PROXY,no-resolve
+IP-CIDR,50.112.0.0/17,PROXY,no-resolve
 
-IP-CIDR,52.220.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.67.195.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.93.195.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.179.185.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.201.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.207.0.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.238.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.248.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.210.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.254.128.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.255.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,63.32.46.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,157.175.44.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,184.0.0.0/8,PROXY,force-remote-dns,no-resolve
+IP-CIDR,52.220.0.0/15,PROXY,no-resolve
+IP-CIDR,52.67.195.0/24,PROXY,no-resolve
+IP-CIDR,54.93.195.0/24,PROXY,no-resolve
+IP-CIDR,54.179.185.0/24,PROXY,no-resolve
+IP-CIDR,54.201.0.0/16,PROXY,no-resolve
+IP-CIDR,54.207.0.0/17,PROXY,no-resolve
+IP-CIDR,54.238.0.0/16,PROXY,no-resolve
+IP-CIDR,54.248.0.0/15,PROXY,no-resolve
+IP-CIDR,54.210.0.0/16,PROXY,no-resolve
+IP-CIDR,54.254.128.0/17,PROXY,no-resolve
+IP-CIDR,54.255.0.0/16,PROXY,no-resolve
+IP-CIDR,63.32.46.0/24,PROXY,no-resolve
+IP-CIDR,157.175.44.0/24,PROXY,no-resolve
+IP-CIDR,184.0.0.0/8,PROXY,no-resolve
 
 
 
@@ -1064,6 +1066,8 @@ IP-CIDR,184.0.0.0/8,PROXY,force-remote-dns,no-resolve
 # DOMAIN-SUFFIX,akamaistream.net,DIRECT
 # DOMAIN-SUFFIX,akamaized.net,DIRECT
 # DOMAIN-SUFFIX,speedtest.net,DIRECT
+DOMAIN,livew.l.qq.com,DIRECT
+DOMAIN,vd.l.qq.com,DIRECT
 DOMAIN,blzddist1-a.akamaihd.net,DIRECT
 DOMAIN,cdp.cloud.unity3d.com,DIRECT
 DOMAIN,client.amplifi.com,DIRECT
