--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1554,6 +1554,7 @@ FINAL,PROXY
 ^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
 
+^https?:\/\/log.nuomi.com _ reject
 
 
 
