--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1555,7 +1555,7 @@ FINAL,PROXY
 ^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
 
 ^https?:\/\/log.nuomi.com _ reject
-
+^https?:\/\/loc.map.baidu.com _ reject
 
 
 
