--- a/quan/Rewrite.conf
+++ b/quan/Rewrite.conf
@@ -20,3 +20,5 @@
 ^https?://m.smzdm.com/app/ url reject
 
 ^https?:\/\/.+\.atm\.youku\.com url reject
+^https?:\/\/nuomi.com url reject
+^https?:\/\/loc.map.baidu.com url reject
