--- a/quan/Rewrite.conf
+++ b/quan/Rewrite.conf
@@ -1,3 +1,64 @@
+hostname = *.kingsoft-office-service.com,gw.alicdn.com,acs.m.taobao.com,api.zhihu.com,www.zhihu.com,guide-acs.m.taobao.com,app.yinxiang.com,i.weread.qq.com,mp.weixin.qq.com,4gimg.map.qq.com,newsso.map.qq.com,r.inews.qq.com,ssl.kohsocialapp.qq.com,ss0.bdstatic.com,api.smzdm.com,m*.amap.com,youtubei.googleapis.com,s.youtube.com,www.youtube.com,ios.wps.cn,api-mifit*.huami.com,
+
+
+# > Alibaba
+^https?:\/\/gw\.alicdn\.com\/.*\.jpg_(9\d{2}|\d{4}) url reject-img
+# >> 闲鱼
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.idle\.home\.welcome\/ url reject-img
+# >> 飞猪
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.trip\.activity\.querytmsresources\/ url reject-img
+# >> 淘票票
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopadvertiseapi\.queryadvertise\/ url reject-img
+# >> 口碑
+^https?:\/\/render\.alipay\.com\/p\/s\/h5data\/prod\/spring-festival-2019-h5data\/popup-h5data\.json url reject-img
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.o2o\.ad\.gateway\.get\/ url reject-img
+^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.taobao\.wireless\.home\.splash\.awesome\.get\/ url reject-img
+# >> AMap
+^https?:\/\/m\d\.amap\.com\/ws\/valueadded\/alimama\/splash_screen\/ url reject-img
+# > Baidu
+# >> 百度网盘
+^https?:\/\/update\.pan\.baidu\.com\/statistics url reject-img
+^https?:\/\/issuecdn\.baidupcs\.com\/issue\/netdisk\/guanggao\/ url reject-img
+# >> 百度贴吧
+^https?:\/\/c\.tieba\.baidu\.com\/c\/s\/splashSchedule url reject-img
+^https?:\/\/c\.tieba\.baidu\.com\/c\/f\/forum\/getAdInfo url reject-img
+^https?:\/\/c\.tieba\.baidu\.com\/\w+\/\w+\/(sync|newRnSync|mlog) url reject-img
+# >> 百度地图
+# ^https?:\/\/.+\/client\/phpui2\/ url reject-img
+^https?:\/\/ss0\.bdstatic\.com/.+_\d{3}_\d{4}\.jpg url reject-img
+
+# > Tencent
+# >> Tencent Futubull
+^https?:\/\/api5\.futunn\.com\/ad\/ url reject-img
+# >> Tencent Game
+^https?:\/\/ssl\.kohsocialapp\.qq\.com:10001\/game\/buttons url reject-img
+^https?:\/\/qt\.qq\.com\/lua\/mengyou\/get_splash_screen_info url reject-img
+# >> Tencent Maps
+^https?:\/\/3gimg\.qq\.com\/tencentMapTouch\/app\/activity\/ url reject-img
+^https?:\/\/3gimg\.qq\.com\/tencentMapTouch\/splash\/ url reject-img
+^https?:\/\/4gimg\.map\.qq\.com\/mwaSplash\/ url reject-img
+# >> Tencent QQLive
+^https?:\/\/btrace.qq.com url reject-img
+^https?:\/\/vv\.video\.qq\.com\/getvmind\? url reject-img
+^https?:\/\/.+\.mp4.+&sdtfrom=v3004 url reject-img
+# >> Tencent QQNews
+^https?:\/\/r\.inews\.qq\.com\/(adsBlacklist|getFullScreenPic|getQQNewsRemoteConfig) url reject-img
+# >> Tencent WeChat
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/(ad_|advertisement|getappmsgad) url reject-img
+
+
+# > Google
+^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
+^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
+^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
+^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
+^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
+^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
+
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com.sg
 
 ^https?:\/\/(www.)?(g|google)\.com url 302 https://www.google.com.sg
@@ -7,18 +68,23 @@
 ^https?:\/\/api\.zhihu\.com\/(launch|real_time) url reject-img
 ^https?:\/\/api\.zhihu\.com\/commercial_api\/(launch|real_time) url reject-img
 
-# > Kingsoft WPS
+#wps
 ^https?:\/\/ios\.wps\.cn\/ad-statistics-service url reject-img
 ^https?:\/\/mobile-pic\.cache\.iciba\.com\/feeds_ad\/ url reject-img
 ^https?:\/\/.+\.kingsoft-office-service\.com\/ad url reject-img
 
-^https?:\/\/ss0\.bdstatic\.com/.+_\d{3}_\d{4}\.jpg url reject-img
 
-^https://oia.zhihu.com/answers/ url reject
-^https?://tieba.baidu.com/mo/q/ url reject
-^https?://app.smzdm.com/xiazai/ url reject
-^https?://m.smzdm.com/app/ url reject
+^https:\/\/oia\.zhihu\.com/answers\/ url reject
+^https?:\/\/tieba\.baidu\.com\/mo\/q\/ url reject
+^https?:\/\/app\.smzdm\.com\/xiazai\/ url reject
+^https?:\/\/m\.smzdm\.com\/app\/ url reject
+
+# > 印象笔记
+^https?:\/\/app\.yinxiang\.com\/ads\/ url reject-img
 
 ^https?:\/\/.+\.atm\.youku\.com url reject
-^https?:\/\/nuomi.com url reject
-^https?:\/\/loc.map.baidu.com url reject
+^https?:\/\/nuomi\.com url reject
+^https?:\/\/loc\.map\.baidu\.com url reject
+
+# > MI_Fit
+^https?:\/\/api-mifit.+\.huami\.com\/discovery\/mi\/discovery\/.+_ad\? url reject-img
