--- a/quan/Rewrite.conf
+++ b/quan/Rewrite.conf
@@ -1,4 +1,4 @@
-hostname = *.kingsoft-office-service.com,gw.alicdn.com,acs.m.taobao.com,api.zhihu.com,www.zhihu.com,guide-acs.m.taobao.com,app.yinxiang.com,i.weread.qq.com,mp.weixin.qq.com,4gimg.map.qq.com,newsso.map.qq.com,r.inews.qq.com,ssl.kohsocialapp.qq.com,ss0.bdstatic.com,api.smzdm.com,m*.amap.com,youtubei.googleapis.com,s.youtube.com,www.youtube.com,ios.wps.cn,api-mifit*.huami.com,
+hostname = *.kingsoft-office-service.com,gw.alicdn.com,acs.m.taobao.com,api.zhihu.com,www.zhihu.com,*,baidu.com,guide-acs.m.taobao.com,app.yinxiang.com,i.weread.qq.com,mp.weixin.qq.com,4gimg.map.qq.com,newsso.map.qq.com,r.inews.qq.com,ssl.kohsocialapp.qq.com,ss0.bdstatic.com,api.smzdm.com,m*.amap.com,youtubei.googleapis.com,s.youtube.com,www.youtube.com,ios.wps.cn,api-mifit*.huami.com,
 
 
 # > Alibaba
