--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -10,6 +10,7 @@ update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.co
 
 
 [Rule]
+USER-AGENT,com.apple.trustd*,DIRECT
 DOMAIN,api.smoot.apple.com,DIRECT
 DOMAIN,api.smoot.apple.com.cn,DIRECT
 DOMAIN,configuration.apple.com,DIRECT
@@ -412,6 +413,8 @@ DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-SUFFIX,apsalar.com,REJECT
 DOMAIN-SUFFIX,apxadtracking.net,REJECT
 DOMAIN-SUFFIX,axonix.com,REJECT
+DOMAIN-SUFFIX,msite.baidu.com,REJECT
+DOMAIN-SUFFIX,xiongzhang.baidu.com,REJECT
 DOMAIN-SUFFIX,bayimob.com,REJECT
 DOMAIN-SUFFIX,bobo.com,REJECT
 DOMAIN-SUFFIX,bulldogcpi.com,REJECT
@@ -1479,6 +1482,12 @@ FINAL,PROXY
 *.cn = server:119.29.29.29
 *.taobao.com = server:223.5.5.5
 *.qq.com = server:119.29.29.29
+*.ithome.com = server:119.29.29.29
+*.smzdm.com = server:119.29.29.29
+*.alicdn.com = server:223.5.5.5
+*.amap.com = server:223.5.5.5
+*.10010js.com = server:119.29.29.29
+*.servicewechat.com = server:119.29.29.29
 
 [URL Rewrite]
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.sg 302
