--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,7 +1,7 @@
 [General]
 doh-server-only = true
 doh-server-url = https://1.0.0.1/dns-query
-skip-PROXY,force-remote-dns = 192.168.0.0/16,193.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,127.0.0.1,17.0.0.0/8,localhost,*.local
+skip-proxy = 192.168.0.0/16,193.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,127.0.0.1,17.0.0.0/8,localhost,*.local
 bypass-system = true
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 dns-server = 119.29.29.29,202.141.162.123
@@ -165,7 +165,6 @@ DOMAIN,cdnlog.zhenai.com,REJECT
 DOMAIN,cig.com.cn,REJECT
 DOMAIN,cir-smart.baidu.com,REJECT
 DOMAIN,click.ali213.net,REJECT
-DOMAIN,click.PROXY,no-resolveRSKY.COM,REJECT
 DOMAIN,click.suning.cn,REJECT
 DOMAIN,click.tianyaui.com,REJECT
 DOMAIN,clkstat.qihoo.com,REJECT
@@ -309,7 +308,6 @@ DOMAIN,stat.cutv.com,REJECT
 DOMAIN,stat.download.xunlei.com,REJECT
 DOMAIN,stat.ea3w.com,REJECT
 DOMAIN,stat.funshion.net,REJECT
-DOMAIN,stat.PROXY,no-resolve.YY.COM,REJECT
 DOMAIN,stat.hebnews.cn,REJECT
 DOMAIN,stat.hkwb.net,REJECT
 DOMAIN,stat.house365.com,REJECT
