--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1473,7 +1473,7 @@ USER-AGENT,WebTorrent*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 USER-AGENT,YYeTs*,DIRECT
 GEOIP,CN,DIRECT
-FINAL,PROXY,force-remote-dns
+FINAL,PROXY
 
 [Host]
 *.baidu.com = server:119.29.29.29
