--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,10 +1,8 @@
 [General]
-doh-server-only = false
-doh-server-url = https://1.0.0.1/dns-query
 skip-proxy = 192.168.0.0/16,193.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,127.0.0.1,17.0.0.0/8,localhost,*.local
 bypass-system = true
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = 1.0.0.1,202.141.162.123
+dns-server = 8.8.4.4:853,8.8.8.8:853
 ipv6 = false
 update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.conf
 
@@ -799,6 +797,7 @@ DOMAIN-SUFFIX,japantimes.co.jp,PROXY
 DOMAIN-SUFFIX,jcpenney.com,PROXY
 DOMAIN-SUFFIX,jdbimgs.com,PROXY
 DOMAIN-SUFFIX,jiji.com,PROXY
+DOMAIN-SUFFIX,jsdelivr.net,PROXY
 DOMAIN-SUFFIX,jinx.com,PROXY
 DOMAIN-SUFFIX,jkforum.net,PROXY
 DOMAIN-SUFFIX,joinmastodon.org,PROXY
@@ -895,11 +894,14 @@ DOMAIN-SUFFIX,scdn.co,PROXY
 DOMAIN-SUFFIX,scribd.com,PROXY
 DOMAIN-SUFFIX,scupio.com,PROXY
 DOMAIN-SUFFIX,sehuatang.net,PROXY
+DOMAIN-SUFFIX,segment.com,PROXY
 DOMAIN-SUFFIX,shattered.io,PROXY
 DOMAIN-SUFFIX,spoti.fi,PROXY
 DOMAIN-SUFFIX,spotify.com,PROXY
 DOMAIN-SUFFIX,storage.msn.com,PROXY
 DOMAIN-SUFFIX,synergyse.com,PROXY
+DOMAIN-SUFFIX,twimg.com,PROXY
+DOMAIN-SUFFIX,t.co,PROXY
 DOMAIN-SUFFIX,t.me,PROXY
 DOMAIN-SUFFIX,touimg.com,PROXY
 DOMAIN-SUFFIX,tdesktop.com,PROXY
@@ -918,6 +920,7 @@ DOMAIN-SUFFIX,webmproject.org,PROXY
 DOMAIN-SUFFIX,webrtc.org,PROXY
 DOMAIN-SUFFIX,whatbrowser.org,PROXY
 DOMAIN-SUFFIX,widevine.com,PROXY
+DOMAIN-SUFFIX,wikipedia.org,PROXY
 DOMAIN-SUFFIX,wikimedia.org,PROXY
 DOMAIN-SUFFIX,x.company,PROXY
 DOMAIN-SUFFIX,xn--ngstr-lra8j.com,PROXY
@@ -977,7 +980,10 @@ IP-CIDR,35.158.0.0/16,PROXY,no-resolve
 IP-CIDR,157.175.0.0/16,PROXY,no-resolve
 IP-CIDR,50.112.0.0/17,PROXY,no-resolve
 IP-CIDR,52.220.0.0/15,PROXY,no-resolve
+IP-CIDR,52.86.0.0/15,PROXY,no-resolve
 IP-CIDR,52.67.195.0/24,PROXY,no-resolve
+IP-CIDR,52.86.0.0/15,PROXY,no-resolve
+IP-CIDR,54.172.0.0/15,PROXY,no-resolve
 IP-CIDR,54.93.195.0/24,PROXY,no-resolve
 IP-CIDR,54.179.185.0/24,PROXY,no-resolve
 IP-CIDR,54.201.0.0/16,PROXY,no-resolve
@@ -1022,6 +1028,7 @@ DOMAIN-SUFFIX,51ym.me,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,71.am.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
+DOMAIN-SUFFIX,95516.com,DIRECT
 DOMAIN-SUFFIX,abchina.com,DIRECT
 DOMAIN-SUFFIX,abercrombie.com,DIRECT
 DOMAIN-SUFFIX,accuweather.com,DIRECT
@@ -1035,6 +1042,7 @@ DOMAIN-SUFFIX,airtable.com,DIRECT
 DOMAIN-SUFFIX,aixifan.com,DIRECT
 DOMAIN-SUFFIX,akadns.net,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
+DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alikunlun.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
@@ -1251,7 +1259,7 @@ DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,myqcloud.com,DIRECT
 DOMAIN-SUFFIX,myunlu.com,DIRECT
 DOMAIN-SUFFIX,myzaker.com,DIRECT
-DOMAIN-SUFFIX,niupic.com,DIRECT
+DOMAIN-SUFFIX,niupic.com,PROXY
 DOMAIN-SUFFIX,nanyangpt.com,DIRECT
 DOMAIN-SUFFIX,ncore.cc,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
@@ -1476,23 +1484,15 @@ GEOIP,CN,DIRECT
 FINAL,PROXY
 
 [Host]
-*.baidu.com = server:119.29.29.29
-*.cn = server:119.29.29.29
 *.taobao.com = server:223.5.5.5
 *.qq.com = server:119.29.29.29
-*.ithome.com = server:119.29.29.29
-*.smzdm.com = server:119.29.29.29
 *.alicdn.com = server:223.5.5.5
 *.amap.com = server:223.5.5.5
 *.10010js.com = server:119.29.29.29
-*.servicewechat.com = server:119.29.29.29
+*.suning.com = server:119.29.29.29
+*.cn = server:114.114.114.114
 
 [URL Rewrite]
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.sg 302
-^https?:\/\/(www.)?ign\.xn--fiqs8s\/ http://cn.ign.com/ccpref/us 302
-^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
-
-
-
